--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
     // https://firebase.google.com/docs/web/setup#available-libraries
 
     // Your web app's Firebase configuration
-    const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+        const firebaseConfig = {
+      apiKey: "AIzaSyCYkZEurG7MKQABCRUTUkhQttpJ4MHBa7s",
+      authDomain: "ficha-rpg-7c1ea.firebaseapp.com",
+      projectId: "ficha-rpg-7c1ea",
+      storageBucket: "ficha-rpg-7c1ea.appspot.com",
+      messagingSenderId: "1074084249884",
+      appId: "1:1074084249884:web:34252b5c915d1ed37fbad9"
     };
+
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
